Launchpad automatic translations update.

--- a/po/stellarium/hu.po
+++ b/po/stellarium/hu.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: Stellarium 0.10.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-27 15:19+0000\n"
+"PO-Revision-Date: 2013-01-28 10:36+0000\n"
 "Last-Translator: misibacsi <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-28 05:11+0000\n"
+"X-Launchpad-Export-Date: 2013-01-29 05:19+0000\n"
 "X-Generator: Launchpad (build 16451)\n"
 "X-Poedit-Language: Hungarian\n"
 
@@ -4288,6 +4288,12 @@ msgid ""
 "image scaled, a good deal of the screen can be wasted.  Therefore I "
 "recommend that you leave it off, unless you feel you have a need of it."
 msgstr ""
+"A kép méretezhető a képernyőn. Ennek az a szerepe, hogy összehasonlítható "
+"legyen egy bizonyos okulár/távcső kombináció egy másfajta beállítással. "
+"Ugyanaz az okulár két különböző távcsőben - amiknek nem azonos a "
+"fókusztávolsága - eltérő méretű kört fog mutatni. Hátránya a beállításnak, "
+"hogy a kép nagy része elvész, ezért azt tanácsoljuk, hogy ez a beállítás "
+"legyen kikapcsolva. Szükség esetén be lehet kapcsolni."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:431
 msgid ""
@@ -4304,6 +4310,9 @@ msgid ""
 "0.5%1, 2.0%1, and 4.0%1, helping you see what you would expect to see with "
 "the naked eye through the Telrad (or similar) finder."
 msgstr ""
+"A Telrad kereső bekapcsolható (az okulár nézetnek kikapcsolva kell lennie). "
+"Ez három koncentrikus kört rajzol (0,5%1, 2,0%1 és 4,0%1). Ez hasonló képet "
+"mutat, mint amit Telrad (vagy hasonló) keresőn lehetne látni szabad szemmel."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:433
 msgid "If you find any issues, please let me know.  Enjoy!"
@@ -6427,6 +6436,8 @@ msgid ""
 "isolated neutron star with pulsed thermal X-ray emission but no detectable "
 "radio emission"
 msgstr ""
+"elszigetelt neutroncsillag pillanatnyi termális röntgenemisszióval, "
+"rádiósugárzás nélkül"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:108
 msgid "Pulsars Plug-in"
