--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-27 14:25+0000\n"
+"PO-Revision-Date: 2013-01-28 09:27+0000\n"
 "Last-Translator: Ivan Marti-Vidal <i.martividal@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-28 05:11+0000\n"
+"X-Launchpad-Export-Date: 2013-01-29 05:19+0000\n"
 "X-Generator: Launchpad (build 16451)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -160,6 +160,26 @@ msgstr "Mover el telescopio #%1 a el punto en el centro de la pantalla"
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:516
 msgid "OK"
 msgstr "Aceptar"
+
+#: plugins/Observability/src/gui/ObservabilityDialog.cpp:110
+msgid ""
+"Happens when the angular separation between the Sun and the celestial object "
+"are maximum. In most cases, this is equivalent to say that the Equatorial "
+"longitudes of the Sun and the object differ by 180 degrees, so the Sun is in "
+"opposition to the object. When an object is at its maximum possible angular "
+"separation from the Sun (no matter if it is a planet or a star), it "
+"culminates roughly at midnight, and on the darkest possible area of the Sky "
+"at that declination. Hence, that is the 'best' night to observe a particular "
+"object."
+msgstr ""
+"Sucede cuando la distancia angular entre el Sol y el objeto celeste es "
+"máxima. En la mayoría de los casos, esto es equivalente a decir que la "
+"longitud ecuatorial del Sol difiere 180 grados de la del objeto, por lo que "
+"el Sol y el objeto están en oposición. Cuando el objeto está a su máxima "
+"distancia angular del Sol (no importa si el objeto está fijo o es un "
+"planeta), culmina aproximadamente a medianoche, y en la región más oscura "
+"del cielo. Por lo tanto, la noche cuando un objeto está en oposición es la "
+"\"mejor\" noche para observarlo."
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -7051,26 +7071,6 @@ msgstr ""
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:110
 msgid "Largest Sun separation:"
 msgstr "Máxima separación del Sol:"
-
-#: plugins/Observability/src/gui/ObservabilityDialog.cpp:110
-msgid ""
-"Happens when the angular separation between the Sun and the celestial object "
-"are maximum. In most cases, this is equivalent to say that the Equatorial "
-"longitudes of the Sun and the object differ by 180 degrees, so the Sun is in "
-"opposition to the object. When an object is at its maximum possible angular "
-"separation from the Sun (no matter if it is a planet or a star), it "
-"culminates roughly at midnight, and on the darkest possible area of the Sky "
-"at that declination. Hence, that is the 'best' night to observe a particular "
-"object."
-msgstr ""
-"Sucede cuando la distancia angular entre el Sol y el objeto celeste es "
-"máxima. En la mayoría de los casos, esto es equivalente a decir que la "
-"longitud ecuatorial del Sol difiere 180 de la del objeto, por lo que el Sol "
-"y el objeto están en oposición. Cuando el objeto está a su máxima distancia "
-"angular del Sol (no importa si el objeto está fijo o es un planeta), culmina "
-"aproximadamente a medianoche, y en la región más oscura del cielo. Por lo "
-"tanto, la noche cuando un objeto está en oposición es la \"mejor\" noche "
-"para observarlo."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:111
 msgid "Nights with source above horizon:"
