Launchpad automatic translations update.

--- a/po/stellarium-skycultures/ga.po
+++ b/po/stellarium-skycultures/ga.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-22 09:02+0000\n"
-"Last-Translator: Weisson Ang <avgserviceprovider@gmail.com>\n"
+"PO-Revision-Date: 2013-01-30 08:33+0000\n"
+"Last-Translator: Weisson Ang <Unknown>\n"
 "Language-Team: Irish <ga@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-23 04:35+0000\n"
-"X-Generator: Launchpad (build 16441)\n"
+"X-Launchpad-Export-Date: 2013-01-31 04:37+0000\n"
+"X-Generator: Launchpad (build 16455)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -27,7 +27,7 @@ msgstr "Aeróga"
 
 #: nebulae/default/ngc2000names.dat:115
 msgid "Barnard's galaxy"
-msgstr ""
+msgstr "Réaltra Barnard ar"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
@@ -47,7 +47,7 @@ msgstr "Optional Blinking"
 
 #: nebulae/default/ngc2000names.dat:120
 msgid "Blue Snowball"
-msgstr ""
+msgstr "snowball gorm"
 
 #: nebulae/default/ngc2000names.dat:121
 msgid "Blue planetary"
@@ -207,7 +207,7 @@ msgstr "Réaltnéal Lagoon"
 
 #: nebulae/default/ngc2000names.dat:170 nebulae/default/ngc2000names.dat:171
 msgid "Little Dumbbell"
-msgstr ""
+msgstr "beag dumbbell"
 
 #: nebulae/default/ngc2000names.dat:172
 msgid "Little Gem"
