--- a/po/stellarium/th.po
+++ b/po/stellarium/th.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: Thai for stellarium 0.8.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-18 23:15+0700\n"
-"PO-Revision-Date: 2013-01-30 04:37+0000\n"
+"PO-Revision-Date: 2013-01-30 07:20+0000\n"
 "Last-Translator: Worachate Boonplod <Unknown>\n"
 "Language-Team: MicKi Alone <Need24Get@msn.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-30 04:37+0000\n"
+"X-Launchpad-Export-Date: 2013-01-31 04:37+0000\n"
 "X-Generator: Launchpad (build 16455)\n"
 "X-Poedit-Country: THAILAND\n"
 "X-Poedit-Language: Thai\n"
@@ -668,11 +668,13 @@ msgid ""
 "Several people have made significant contributions, but are no longer "
 "active. Their work has made a big difference to the project:"
 msgstr ""
+"หลายคนเคยมีส่วนร่วมในการพัฒนา แต่ปัจจุบันไม่มีความเคลื่อนไหว "
+"ผลงานของพวกเขาเป็นประโยชน์ต่อโครงการ:"
 
 #: src/gui/HelpDialog.cpp:319
 #, qt-format
 msgid "Graphic/other designer: %1"
-msgstr "นักออกแบบกราฟฟิก: %1"
+msgstr "นักออกแบบกราฟิก/อื่น ๆ: %1"
 
 #: src/gui/HelpDialog.cpp:324 src/gui/HelpDialog.cpp:325
 #, qt-format
@@ -1474,18 +1476,26 @@ msgid ""
 "Due to the quirks in Mercury's orbit and rotation at certain spots the sun "
 "will rise & set 3 different times in one Mercury day."
 msgstr ""
+"วงโคจรและการหมุนที่แปลกของดาวพุธ ทำให้ที่จุดหนึ่ง จะเห็นดวงอาทิตย์ขึ้นและตก "
+"3 ครั้ง ภายใน 1 วันดาวพุธ"
 
 #: src/translations.h:255
 msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Scorpio and Sagittarius on April 26, 2017."
 msgstr ""
+"ก่อนที่ดาวอังคารจะบังดวงอาทิตย์ โฟบอสโผล่มาจากเบื้องหลัง "
+"และบังดวงอาทิตย์ก่อน โดยเกิดขึ้นในวันที่ 26 เมษายน ค.ศ. 2017 "
+"ระหว่างกลุ่มดาวแมงป่องกับกลุ่มดาวคนยิงธนู"
 
 #: src/translations.h:256
 msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Taurus and Gemini on July 23, 2031."
 msgstr ""
+"ก่อนที่ดาวอังคารจะบังดวงอาทิตย์ โฟบอสโผล่มาจากเบื้องหลัง "
+"และบังดวงอาทิตย์ก่อน โดยเกิดขึ้นในวันที่ 23 กรกฎาคม ค.ศ. 2031 "
+"ระหว่างกลุ่มดาววัวกับกลุ่มดาวคนคู่"
 
 #: src/translations.h:257
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
@@ -1499,6 +1509,9 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"โฟบอสบังโลกเกิดขึ้นอยู่เสมอ เช่นเดียวกับการบังดาวพฤหัสบดี "
+"แต่การบังโลกและดาวพฤหัสบดีในวันเดียวกันเกิดขึ้นได้ยากมาก "
+"นี่เป็นเหตุการณ์เมื่อวันที่ 23 มกราคม ค.ศ. 2048 ตามเวลาจริง"
 
 #: src/translations.h:259
 msgid ""
@@ -1509,11 +1522,17 @@ msgid ""
 "emerges from Mars it is still eclipsed and dimmed in Mars' shadow, only to "
 "light up later."
 msgstr ""
+"ในมุมมองจากดีมอส เห็นโฟบอสเคลื่อนนำหน้าดาวอังคาร แล้วไปผ่านหน้าดวงอาทิตย์ "
+"จากนั้นถอยกลับมาผ่านหน้าดวงอาทิตย์อีกครั้งแบบบางส่วน "
+"(เห็นได้เฉพาะจากซีกใต้ของดีมอส) ต่อมา ดาวอังคารเคลื่อนเข้าบังดวงอาทิตย์ "
+"ขณะที่โฟบอสปรากฏผ่านหน้าดาวอังคาร โดยอยู่ระหว่างดาวอังคารกับดีมอส "
+"เมื่อโฟบอสออกจากการผ่านหน้าดาวอังคาร มันยังคงอยู่ในเงามืดของดาวอังคาร "
+"ก่อนจะสว่างขึ้นมาอีกครั้งเมื่อออกจากเงามืด"
 
 #: src/translations.h:260
 msgid ""
 "Screensaver of various happenings in the Solar System. 171 events in all!"
-msgstr ""
+msgstr "ภาพพักหน้าจอ แสดง 171 ปรากฏการณ์! ที่เกิดขึ้นในระบบสุริยะ"
 
 #: src/translations.h:261
 msgid "A tour of the western constellations."
@@ -1527,17 +1546,21 @@ msgstr ""
 #: src/translations.h:263
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
-msgstr ""
+msgstr "โลกเมื่อมองจากวัตถุอื่น ๆ ในระบบสุริยะ ตลอดช่วงคริสต์ศตวรรษที่ 21"
 
 #: src/translations.h:264
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
 msgstr ""
+"ดาวศุกร์ผ่านหน้าดวงอาทิตย์เมื่อวันที่ 6 มิถุนายน ค.ศ. 2012 สังเกตจากซิดนีย์ "
+"ออสเตรเลีย"
 
 #: src/translations.h:265
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"การเกิดแอนะเลมมา (analemma) "
+"ซึ่งเป็นเส้นทางการเคลื่อนที่ของดวงอาทิตย์บนท้องฟ้าในรอบปี"
 
 #: src/translations.h:266
 msgid ""
@@ -2551,31 +2574,31 @@ msgstr "เพิ่ม ๑ สัปดาห์สุริยะ"
 
 #: src/translations.h:527
 msgid "Add 1 synodic month"
-msgstr ""
+msgstr "เพิ่ม 1 เดือนดิถี"
 
 #: src/translations.h:528
 msgid "Add 1 draconic month"
-msgstr ""
+msgstr "เพิ่ม 1 เดือนราหู"
 
 #: src/translations.h:529
 msgid "Add 1 anomalistic month"
-msgstr ""
+msgstr "เพิ่ม 1 เดือนจุดใกล้"
 
 #: src/translations.h:530
 msgid "Add 1 mean tropical month"
-msgstr ""
+msgstr "เพิ่ม 1 เดือนฤดูกาลเฉลี่ย"
 
 #: src/translations.h:531
 msgid "Add 1 draconic year"
-msgstr ""
+msgstr "เพิ่ม 1 ปีราหู"
 
 #: src/translations.h:532
 msgid "Add 1 mean tropical year"
-msgstr ""
+msgstr "เพิ่ม 1 ปีฤดูกาลเฉลี่ย"
 
 #: src/translations.h:533
 msgid "Add 1 mean tropical century"
-msgstr ""
+msgstr "เพิ่ม 1 ศตวรรษฤดูกาลเฉลี่ย"
 
 #: src/translations.h:534
 msgid "Slow down the script execution rate"
@@ -2603,7 +2626,7 @@ msgstr "เวลาเดินหน้า (เล็กน้อย)"
 
 #: src/translations.h:540
 msgid "Pause script execution"
-msgstr ""
+msgstr "หยุดสคริปต์ชั่วคราว"
 
 #: src/translations.h:541
 msgid "Resume script execution"
@@ -2647,7 +2670,7 @@ msgstr "ลด 1 ปีดาราคติ"
 
 #: src/translations.h:551
 msgid "Subtract 1 sidereal century"
-msgstr ""
+msgstr "ลบ 1 ศตวรรษดาราคติ"
 
 #: src/translations.h:552
 msgid "Subtract 1 solar day"
@@ -2663,31 +2686,31 @@ msgstr "ลบ ๑ สัปดาห์สุริยะ"
 
 #: src/translations.h:555
 msgid "Subtract 1 synodic month"
-msgstr ""
+msgstr "ลบ 1 เดือนดิถี"
 
 #: src/translations.h:556
 msgid "Subtract 1 draconic month"
-msgstr ""
+msgstr "ลบ 1 เดือนราหู"
 
 #: src/translations.h:557
 msgid "Subtract 1 anomalistic month"
-msgstr ""
+msgstr "ลบ 1 เดือนจุดใกล้"
 
 #: src/translations.h:558
 msgid "Subtract 1 mean tropical month"
-msgstr ""
+msgstr "ลบ 1 เดือนฤดูกาลเฉลี่ย"
 
 #: src/translations.h:559
 msgid "Subtract 1 draconic year"
-msgstr ""
+msgstr "ลบ 1 เดือนราหู"
 
 #: src/translations.h:560
 msgid "Subtract 1 mean tropical year"
-msgstr ""
+msgstr "ลบ 1 ปีฤดูกาลเฉลี่ย"
 
 #: src/translations.h:561
 msgid "Subtract 1 mean tropical century"
-msgstr ""
+msgstr "ลบ 1 ศตวรรษฤดูกาลเฉลี่ย"
 
 #. TRANSLATORS: Keyboard action group name
 #: src/translations.h:564
@@ -2842,7 +2865,7 @@ msgstr "ซ่อนแถบแนวตั้งโดยอัตโนมั
 
 #: src/translations.h:599
 msgid "Go to home"
-msgstr ""
+msgstr "ไปที่ตำแหน่งเริ่มต้น"
 
 #: src/translations.h:600
 msgid "Quit"
@@ -2923,7 +2946,7 @@ msgstr "มุมมองเลนส์ใกล้ตา"
 
 #: src/translations.h:631
 msgid "Show crosshairs"
-msgstr ""
+msgstr "แสดงสายใยเล็ง"
 
 #: src/translations.h:632
 msgid "Oculars popup menu"
@@ -3527,7 +3550,7 @@ msgstr "ได้รับการปรับแต่ง"
 
 #: src/ui_configurationDialog.h:977
 msgid "Displayed fields"
-msgstr ""
+msgstr "ขอบเขตที่แสดง"
 
 #: src/ui_configurationDialog.h:979
 msgid "Geocentric equatorial coordinates, equinox of J2000.0"
@@ -4307,15 +4330,15 @@ msgstr ""
 #: plugins/Oculars/src/gui/OcularDialog.cpp:449
 #: plugins/Oculars/src/gui/OcularDialog.cpp:454
 msgid "[no key defined]"
-msgstr ""
+msgstr "[ไม่มีการกำหนดปุ่มเอาไว้]"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:458
 msgid "Switches on/off the ocular overlay."
-msgstr ""
+msgstr "เปิด/ปิด ภาพซ้อนแสดงเลนส์ใกล้ตา"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:462
 msgid "Opens the pop-up navigation menu."
-msgstr ""
+msgstr "เปิดเมนูนำทางแบบผุดขึ้น"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:861
 msgid "Enable only if an object is selected"
@@ -5253,7 +5276,7 @@ msgstr "ไ&รต์แอสเซนชัน (J2000):"
 
 #: plugins/TelescopeControl/src/ui_slewDialog.h:293
 msgid "&Current object"
-msgstr ""
+msgstr "&วัตถุปัจจุบัน"
 
 #: plugins/TelescopeControl/src/ui_slewDialog.h:295
 msgid "Hours-minutes-seconds format"
@@ -6163,6 +6186,9 @@ msgid ""
 "can be seen %1here%2 (right scale in days), and this model is used for this "
 "plugin."
 msgstr ""
+"โปรแกรมเสริมนี้ใช้แบบจำลองอย่างง่ายของกราฟความสว่างสำหรับแต่ละซูเปอร์โนวา "
+"กราฟของซูเปอร์โนวาชนิดที่ 1 และ 2 สามารถดูได้จาก%1ที่นี่%2 "
+"(มาตราทางขวามีหน่วยเป็นวัน)"
 
 #: plugins/Supernovae/src/gui/SupernovaeDialog.cpp:118
 msgid "Acknowledgments"
@@ -6344,12 +6370,12 @@ msgstr "พาร์เซก"
 #: plugins/Pulsars/src/Pulsar.cpp:157
 #, qt-format
 msgid "Spin down energy loss rate: %1 ergs/s"
-msgstr ""
+msgstr "อัตราการสูญเสียมวลขณะหมุนช้าลง: %1 เอิร์ก/วินาที"
 
 #: plugins/Pulsars/src/Pulsar.cpp:161
 #, qt-format
 msgid "Binary period of pulsar: %1 days"
-msgstr ""
+msgstr "คาบของดาวคู่ในพัลซาร์: %1 วัน"
 
 #: plugins/Pulsars/src/Pulsar.cpp:165
 #, qt-format
@@ -6407,25 +6433,27 @@ msgstr "มีดาวที่เป็นคู่จำนวนหนึ่
 
 #: plugins/Pulsars/src/Pulsar.cpp:297
 msgid "with pulsed emission from radio to infrared or higher frequencies"
-msgstr ""
+msgstr "มีการเปล่งเป็นห้วง ๆ จากคลื่นวิทยุถึงอินฟราเรด หรือความถี่ที่สูงกว่า"
 
 #: plugins/Pulsars/src/Pulsar.cpp:302
 msgid "with pulsed emission only at infrared or higher frequencies"
-msgstr ""
+msgstr "มีการเปล่งเป็นห้วง ๆ เฉพาะในคลื่นอินฟราเรด หรือความถี่ที่สูงกว่า"
 
 #: plugins/Pulsars/src/Pulsar.cpp:307
 msgid "with pulsed emission in the radio band"
-msgstr ""
+msgstr "มีการเปล่งเป็นห้วง ๆ ในแถบคลื่นวิทยุ"
 
 #: plugins/Pulsars/src/Pulsar.cpp:312
 msgid "with intermittently pulsed radio emission"
-msgstr ""
+msgstr "มีการเปล่งคลื่นวิทยุเป็นห้วง ๆ อย่างไม่สม่ำเสมอ"
 
 #: plugins/Pulsars/src/Pulsar.cpp:317
 msgid ""
 "isolated neutron star with pulsed thermal X-ray emission but no detectable "
 "radio emission"
 msgstr ""
+"ดาวนิวตรอนเดี่ยวที่มีการเปล่งรังสีเอกซ์เชิงความร้อนเป็นห้วง ๆ "
+"แต่ตรวจไม่พบการเปล่งคลื่นวิทยุ"
 
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:108
 msgid "Pulsars Plug-in"
@@ -6507,10 +6535,13 @@ msgid ""
 "This plugin plots the position of stars with exoplanets. Exoplanets data is "
 "derived from the 'Extrasolar Planets Encyclopaedia' at exoplanet.eu"
 msgstr ""
+"โปรแกรมเสริมแสดงตำแหน่งดาวฤกษ์ที่มีดาวเคราะห์เป็นบริวาร "
+"ข้อมูลดาวเคราะห์นอกระบบมาจาก 'Extrasolar Planets Encyclopaedia' ที่ "
+"exoplanet.eu"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:202
 msgid "Metallicity"
-msgstr ""
+msgstr "ความเป็นโลหะ"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:206
 #: plugins/Exoplanets/src/Exoplanet.cpp:222
@@ -6923,6 +6954,14 @@ msgid ""
 "that the source is hardly observable (or not observable at all) in the dates "
 "between Cosmical set and rise."
 msgstr ""
+"การขึ้น (หรือตก) แบบ Acronychal ของวัตถุ เกิดขึ้นเมื่อวัตถุท้องฟ้าขึ้น "
+"(หรือตก) ขณะที่ดวงอาทิตย์ตก (หรือขึ้น) ตามลำดับ "
+"วันที่แน่นอนของปรากฏการณ์นี้ขึ้นอยู่กับตำแหน่งของผู้สังเกต "
+"ช่วงวันที่อยู่ระหว่างวันทั้งสอง เป็นช่วงที่สามารถสังเกตวัตถุท้องฟ้านั้นได้ดี "
+"เนื่องจากขณะที่วัตถุอยู่บนท้องฟ้า ดวงอาทิตย์อยู่ต่ำกว่าขอบฟ้า ในทางกลับกัน "
+"การขึ้น (หรือตก) แบบ Cosmical เกิดขึ้นเมื่อทั้งวัตถุท้องฟ้าและดวงอาทิตย์ "
+"ขึ้น (หรือตก) ในเวลาเดียวกัน แสดงว่าเป็นช่วงที่สังเกตได้ยาก "
+"หรือไม่สามารถสังเกตได้"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:110
 msgid "Largest Sun separation:"
@@ -6970,6 +7009,20 @@ msgid ""
 "planets (which will not depend on the mere input of a twilight Sun elevation "
 "by the user) will be implemented in future versions of this plugin."
 msgstr ""
+"โปรแกรมคำนวณหาช่วงวันที่วัตถุท้องฟ้าอยู่เหนือขอบฟ้าในเวลากลางคืน โดย "
+"'กลางคืน' หมายถึงช่วงเวลาที่มุมเงยของดวงอาทิตย์อยู่ต่ำกว่าจุดสนธยา "
+"(สามารถกำหนดเองได้, ดูด้านบน) หากวัตถุอยู่นิ่ง "
+"(หรือในกรณีของดาวเคราะห์วงนอก) ช่วงที่สามารถสังเกตวัตถุนั้นได้ในปีปัจจุบัน "
+"สามารถเป็นไปได้ 2 ทาง คือจากวันหนึ่งถึงอีกวันหนึ่ง (เช่น 20 ม.ค. - 15 ก.ย.) "
+"หรือแบ่งเป็น 2 ช่วง (จาก 1 ม.ค. ถึงวันหนึ่ง และจากอีกวันหนึ่งถึง 31 ธ.ค.) "
+"ในกรณีแรก วันแรก (เช่น 20 ม.ค.) จะอยู่ใกล้กับวันที่เรียกว่า 'Heliacal rise' "
+"(วันที่วัตถุขึ้นขณะดวงอาทิตย์ตก) และวันที่สอง (เช่น 15 ก.ย.) "
+"จะอยู่ใกล้กับวันที่เรียกว่า 'Heliacal set' (วันที่วัตถุตกขณะดวงอาทิตย์ขึ้น) "
+"ในกรณีที่ 2 (เช่น จาก 1 ม.ค. - 20 พ.ค. และ 21 ก.ย. - 31 ธ.ค.) วันแรก (20 "
+"พ.ค. ตามตัวอย่าง) จะอยู่ใกล้กับ Heliacal set ส่วนวันที่สอง (21 ก.ย. "
+"ตามตัวอย่าง) จะอยู่ใกล้กับ Heliacal rise "
+"โปรแกรมเสริมนี้จะใช้สมการในคำนวณหาวันดังกล่าวที่แม่นยำกว่านี้ "
+"(ซึ่งจะไม่ขึ้นกับการกำหนดจุดสนธยาโดยผู้ใช้) ในอนาคต"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:112
 msgid "Full Moon:"
