--- a/po/stellarium/pl.po
+++ b/po/stellarium/pl.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-02 20:24+0700\n"
-"PO-Revision-Date: 2013-02-03 03:09+0000\n"
-"Last-Translator: pp/bs <Unknown>\n"
+"PO-Revision-Date: 2013-02-03 21:25+0000\n"
+"Last-Translator: Mike08 <micou8@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-03 04:43+0000\n"
+"X-Launchpad-Export-Date: 2013-02-04 05:11+0000\n"
 "X-Generator: Launchpad (build 16462)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -1757,7 +1757,7 @@ msgstr "Wybrzeże Kości Słoniowej"
 
 #: src/translations.h:313
 msgid "Cook Islands"
-msgstr "Wyspy Kuka"
+msgstr "Wyspy Cooka"
 
 #: src/translations.h:314
 msgid "Chile"
